feat: implement frontmatter

--- a/src/content/projects/32k-tv.mdx
+++ b/src/content/projects/32k-tv.mdx
@@ -1,1 +1,17 @@
-This is MDS
+---
+title: This is the title
+description: "The next generation of Ultra-Ultra-Ultra High Definition TV, with a Crypto twist."
+content: ""
+logo: ""
+announceddate: ""
+releasedate: ""
+links:
+    - 
+        label: 32k TV Website,
+        url: https://32k-tv-inc.com/
+projecttype: Televisions / Crypto-Token
+employees: "0"
+location: "Newcastle"
+---
+
+This is the content asdasd
