feat: add MDX files for projects

--- a/src/content/projects/32k-tv.mdx
+++ b/src/content/projects/32k-tv.mdx
@@ -1,5 +1,5 @@
 ---
-title: This is the title
+title: 32k TV
 description: "The next generation of Ultra-Ultra-Ultra High Definition TV, with a Crypto twist."
 content: ""
 logo: ""
@@ -14,4 +14,4 @@ employees: "0"
 location: "Newcastle"
 ---
 
-This is the content asdasd
+This is the 32k TV page.
