--- a/src/content/projects/seeking-you.mdx
+++ b/src/content/projects/seeking-you.mdx
@@ -1,1 +1,19 @@
-sdfvsgds
+---
+title: Seeking You
+description: "Meet people, but not in a <em>dating</em> kind of way."
+logo: ""
+announceddate: ""
+releasedate: "30/06/2025"
+links:
+    - 
+        label: Website,
+        url: https://www.Seeking-you.org/
+    -
+        label: Seeking You 2
+        url: https://www.Seeking-you2.org/
+projecttype: Social Network
+employees: "0"
+location: "Newcastle"
+---
+
+This is the seeking you page
