feat: add basic content to 32K

--- a/src/content/projects/32k-tv.mdx
+++ b/src/content/projects/32k-tv.mdx
@@ -14,4 +14,15 @@ employees: "0"
 location: "Newcastle"
 ---
 
-This is the 32k TV page.
+In the words of Paul at 32K TV, they "aim to revolutionize the way we consume television by integrating cryptocurrency elements into the viewing experience".
+
+According to their website, they are aiming to unveil the innovations by 2023.
+
+The website continues to say that there are 2 phases to the project. TV sets, and Funding. To help finance this endeavor, Paul has said he is "designing an Initial Coin Offering (ICO) as a two-fold solution".
+
+## Features
+---
+
+### 32K TV Sets
+These new TV sets will come equipped with a unique button that allows viewers to switch between normal and holographic images. Glasses will not be required to view the holographic images.
+The screens will start at 65 inches and go up to 100 inches or more.
