feat: add some info to about page

--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -3,4 +3,21 @@ title: About Paul
 lastUpdated: 23/06/2025
 ---
 
-This is the about page
+Paul Gallant is a 58 year old man from Newcastle-upon-Tyne. He has a YouTube channel [paulgallant3675](https://www.youtube.com/@paulgallant3675) which he has been posting to for many years.
+
+The first video on his channel was uploaded on the 15th of September 2013, this and the next few videos uploaded look to be from a rugby match he attended. He then moves on to showing products from 'Forever living products', a Multi-Level Marketing (MLM) company that sells health and wellness products.
+
+## Current Content
+Paul currently goes live on his YouTube channel every day at 11:30, and 19:00 GMT - provided he hasn't got some excuse for not turning up.
+
+Paul refers to himself as a 'Newcastle United content creator', which is a bit of a stretch as he mostly just talks about himself and his upcoming plans to get off universal credit. He does occasionally talk about Newcastle United, but it is usually in the context of how he is a 'super fan' and how he has been a supporter for many years.
+
+He is currently "working on" a variety of apps ([see projects here](/projects)) which he claims will be "coming soon". The only app which has has ever existed in any vaguely meaningful way is "Seeking you", which was briefly live at [seeking-you.org](https://seeking-you.org) but as Paul put it you "couldn't get in". That was because Paul had built the app using an AI tool which generated some basic boilerplate frontend code, but no backend functionality. The app was never functional and was taken down shortly after it was put up. He claims it will be back by the end of the month. Currently that would be June 2025, but he's been saying it for many months now.
+
+## Paul's Past
+Paul seems to post everything he thinks about to some form of social media. He has a public [Facebook profile](https://www.facebook.com/paul.gallant1), with posts going back to August 2008. He has an [Instagram account](https://www.instagram.com/paulgallant) and a [TikTok account](https://www.tiktok.com/@paulgallant3). He says that he no longer uses Twitter(X). However, he does use Threads and has [a profile](https://www.threads.com/@paulgallant) there as well. He seems to mostly use Threads to repost bizzare conspiracy theories, as well as replying to what are obviously bot accounts trying to find a new wife.
+
+[![Paul's threads replied](/img/paul-threads-replies.png)](/img/paul-threads-replies.png)
+
+### Stage coach
+Paul used to work as a driver for Stagecoach, a bus company operating in Newcastle. He worked there for a number of years, but was dismissed sometime in 2017. In 2018 there was a court case against Stagecoach where Paul claimed he was unfairly dismissed.
