feat: seeking you content

--- a/src/content/projects/seeking-you.mdx
+++ b/src/content/projects/seeking-you.mdx
@@ -16,4 +16,10 @@ employees: "0"
 location: "Newcastle"
 ---
 
-This is the seeking you page
+Seeking you is a social network that helps you meet people, but not in a dating kind of way. It's a place to find new friends, share experiences, and connect with others who have similar interests.
+
+That's what Paul seems to want from the app anyway. Currently there is nothing to show about the app - other than that Paul has had the idea.
+
+There was briefly a live site at [seeking-you.org](https://seeking-you.org) but it was never functional. Paul has claimed that the app will be back by the end of June 2025, but given his track record, it is unlikely that this will happen.
+
+The version of the app that was live was built using an AI tool which generated some basic boilerplate frontend code, but no backend functionality.
