adding more info and stagecoach tribunal information

--- a/src/content/projects/geordie-nation.mdx
+++ b/src/content/projects/geordie-nation.mdx
@@ -1,13 +1,21 @@
 ---
 title: Geordie Nation
 description: "A platform for businesses in Newcastle to connect."
-logo: ""
+logo: "/img/geordie-nation-logo.png"
 announceddate: ""
-releasedate: ""
+releasedate: "30/06/2025"
 links: []
 projecttype: Social Network
 employees: "0"
 location: "Newcastle"
 ---
 
-This is the Geordie Nation page.
+Acording to Paul, Geordie-Nation is a social platform dedicated to Newcastle upon Tyne. It enables users to connect with local people, support local businesses, and earn Geordie-Notes — crypto rewards for engaging in the community.
+The platform focuses on building a vibrant local ecosystem by fostering connections, rewarding participation, and promoting Newcastle businesses.
+
+So far the project is just a frontend shell, that doesn't allow for it to work. However Claude.ai, has said to Paul that it works, he has taken this as gospel.
+
+The site is currently down, as Paul can't figure out how to point the DNS records to netlify and upload it to gitub.
+
+A rival site launched under the name "Sunderland-Nation" that was a recreation of the shell had earlier leaked his "AI code" for. It currently has functional social media ecosystem.
+From what has been said by Paul, the creator reached out to help Paul make his own site and do a possible merger.
