--- a/src/content/projects/seeking-you.mdx
+++ b/src/content/projects/seeking-you.mdx
@@ -5,21 +5,23 @@ logo: ""
 announceddate: ""
 releasedate: "30/06/2025"
 links:
-    - 
-        label: Website,
-        url: https://www.Seeking-you.org/
-    -
-        label: Seeking You 2
-        url: https://www.Seeking-you2.org/
+  - label: Website,
+    url: https://www.Seeking-you.org/
+  - label: Lovable.ai Version,
+    url: https://seeking-you-connect-verse.lovable.app/
+  - label: Seeking You 2
+    url: https://www.Seeking-you2.org/
 projecttype: Social Network
 employees: "0"
 location: "Newcastle"
 ---
 
-Seeking you is a social network that helps you meet people, but not in a dating kind of way. It's a place to find new friends, share experiences, and connect with others who have similar interests.
+InitallySeeking you came across as a a social network that helps you meet people, but not in a dating kind of way. It's a place to find new friends, share experiences, and connect with others who have similar interests.
 
-That's what Paul seems to want from the app anyway. Currently there is nothing to show about the app - other than that Paul has had the idea.
+Paul has said that the app is, "Built for content creators by content creators. Stream unlimited, earn cryptocurrency, and connect with a global community in the safest environment on the web."
 
 There was briefly a live site at [seeking-you.org](https://seeking-you.org) but it was never functional. Paul has claimed that the app will be back by the end of June 2025, but given his track record, it is unlikely that this will happen.
 
 The version of the app that was live was built using an AI tool which generated some basic boilerplate frontend code, but no backend functionality.
+
+A new version have been created by Lovable which you can see [here](https://seeking-you-connect-verse.lovable.app/), again this is more boiler plate code, with no functionality. It appears to have less functionality than the inital Seeking-you
