--- a/src/content/projects/seeking-you.mdx
+++ b/src/content/projects/seeking-you.mdx
@@ -5,7 +5,9 @@ logo: ""
 announceddate: ""
 releasedate: "30/06/2025"
 links:
-  - label: Website,
+  - label: Loveable.ai Version 2 (current),
+    url: https://seeking-you-help.lovable.app/
+  - label: SeekingYou.org (original version, now defunct),
     url: https://www.Seeking-you.org/
   - label: Lovable.ai Version,
     url: https://seeking-you-connect-verse.lovable.app/
@@ -13,15 +15,43 @@ links:
     url: https://www.Seeking-you2.org/
 projecttype: Social Network
 employees: "0"
-location: "Newcastle"
+---
+## Overview
+The goal for **Seeking You** is vague. It is apparently a social network to rival FaceBook and TikTok, but it is also a cryptocurrency platform, and a content creator platform.
+
+The website itself has a strapline that reads:
+> AI-powered social media automation for UK content creators. Automatically distribute your content across all platforms and earn SYC tokens for consistent creation.
+
+This seems to imply that it is infact simply a tool for content creators to distribute their content across multiple platforms.
+
 ---
 
-InitallySeeking you came across as a a social network that helps you meet people, but not in a dating kind of way. It's a place to find new friends, share experiences, and connect with others who have similar interests.
-
+## First version
 Paul has said that the app is, "Built for content creators by content creators. Stream unlimited, earn cryptocurrency, and connect with a global community in the safest environment on the web."
 
-There was briefly a live site at [seeking-you.org](https://seeking-you.org) but it was never functional. Paul has claimed that the app will be back by the end of June 2025, but given his track record, it is unlikely that this will happen.
-
+There was briefly a live site at [seeking-you.org](https://seeking-you.org) but it was never functional. Paul has claimed that the app would be back by the end of **June 2025**.
 The version of the app that was live was built using an AI tool which generated some basic boilerplate frontend code, but no backend functionality.
 
-A new version have been created by Lovable which you can see [here](https://seeking-you-connect-verse.lovable.app/), again this is more boiler plate code, with no functionality. It appears to have less functionality than the inital Seeking-you
+A new version was then created on Lovable which you can see [here](https://seeking-you-connect-verse.lovable.app/), again this is more boiler plate code, with no functionality. It appears to have less functionality than the inital **Seeking You**.
+
+---
+
+## Seeking You 2
+After the initial launch and subsequent pull of Seeking You, there was a community effort to throw up a quick clone of the app. This became [Seeking You 2](https://www.Seeking-you2.org/). This was built by a single developer in a single day, and included working authentication - simply to spite Paul and show that it was possible to create a functional version of the app in a very short amount of time.
+
+---
+
+## Current version
+Paul has now started another version of **Seeking You** - again using Lovable. This time it does actually seem to have some functionality as the authentication does work. You are able to access a public feed, currently only by manually navigating to the URL [/home](https://seeking-you-help.lovable.app/home). You will need to be logged in to actually see any posts.
+
+Authentication and user creation _does_ work. However, there are some specific steps you need to take in order to get it to work as the error reporting will always say that the email is already registered. Checking the network tab of the dev tools reveals the actual response from the server which will tell you the _actual_ reason why registration may have failed.
+1. The email must not have been used before, but there is no verification so use any email address, real or fake.
+2. The username must not exist already.
+3. The password _must_ be at least 20 characters, and contain the usual mix of uppercase, lowercase, numbers and special characters in order to be deemed "secure".
+
+_**Be warned:** you cannot delete your account on Seeking You, so if you do create an account _please_ use fake credentials as who knows what Paul might do with them._
+
+It's worth noting that the header of the app actually reads "Seeking You Coin" - which shows what the actual focus of the app is. It is not a social media platform, but rather one of many meme coins that Paul has been trying to get off the ground.
+
+---
+
